--- a/src/components/ur-button-arrow-right/ur-button-arrow-right.css
+++ b/src/components/ur-button-arrow-right/ur-button-arrow-right.css
@@ -1,19 +1,22 @@
 :host {
     border-radius: 50%;
+    --ur-color-on-background: var(--mdui-color-on-background);
+    --ur-color-background: var(--mdui-color-background);
+    --ur-color-surface: var(--mdui-color-surface);
+    --ur-color-on-surface: var(--mdui-color-on-surface);
 
     button,
     mdui-button-icon {
         height: 34px;
         width: 34px;
         border-radius: inherit;
-        fill: #f7f7f7;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         display: flex;
         align-items: center;
         justify-content: center;
         border: 0;
         cursor: pointer;
-        background-color: rgb(239, 239, 239);
+        background-color: rgb(var(--ur-color-surface));
+        color: rgb(var(--ur-color-on-surface));
     }
 
     mdui-button-icon svg {
@@ -21,10 +24,10 @@
     }
 
     mdui-button-icon[disabled] {
-        opacity: 0.5;
+        opacity: none;
     }
 
     mdui-button-icon[disabled] svg {
-        opacity: 0.5;
+        opacity: none;
     }
 }
