--- a/src/components/ur-button-arrow-right/ur-button-arrow-right.css
+++ b/src/components/ur-button-arrow-right/ur-button-arrow-right.css
@@ -24,10 +24,10 @@
     }
 
     mdui-button-icon[disabled] {
-        opacity: none;
+        display: none;
     }
 
     mdui-button-icon[disabled] svg {
-        opacity: none;
+        display: none;
     }
 }
