--- a/src/components/ur-dialog/ur-dialog.css
+++ b/src/components/ur-dialog/ur-dialog.css
@@ -1,8 +1,24 @@
 :host {
     --ur-dialog-panel-border-radius: 0;
+    --ur-color-outline-variant: var(--mdui-color-outline-variant);
 }
 
 :host mdui-dialog::part(panel) {
     padding: 0;
     border-radius: var(--ur-dialog-panel-border-radius);
+}
+
+:host ::slotted([slot="header"]) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 16px;
+
+}
+
+:host ::slotted([slot="header"]) h2 {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 500;
+    color: rgb(var(--ur-color-on-surface));
 }
