--- a/src/components/ur-page-profile/ur-page-profile.css
+++ b/src/components/ur-page-profile/ur-page-profile.css
@@ -1,20 +1,22 @@
 :host {
+    position: relative;
+
     --ur-color-on-background: var(--mdui-color-on-background);
     --ur-color-outline-variant: var(--mdui-color-outline-variant);
-    --ur-color-on-surface-variant: var(--mdui-color-on-surface-variant);
     --ur-color-outline: var(--mdui-color-outline);
-    --ur-on-secondary-container: var(--mdui-on-secondary-container);
-    --ur-color-container-lite: var(--mdui-color-container-lite);
+    --ur-color-primary: var(--mdui-color-primary);
 }
 
 :host .profile {
     display: block;
-    padding: 0 16px;
+    padding: 44px 16px 20px 16px;
     box-sizing: border-box;
 }
 
-:host .profile .info {
-    padding-top: 5px;
+:host .avatar {
+    position: absolute;
+    top: 0;
+    transform: translate(0, -69px);
 }
 
 :host .profile .info .name {
@@ -24,7 +26,7 @@
     line-height: 24px;
 }
 
-:host .profile .info .description {
+:host .profile .info .about {
     color: rgb(var(--ur-color-on-background));
     padding-top: 16px;
     font-weight: 400;
@@ -44,27 +46,40 @@
     display: flex;
 }
 
+:host .profile .info .social a {
+    width: 18px;
+    height: 18px;
+    opacity: 0.75;
+    margin-right: 12px;
+    margin-bottom: 8px;
+    text-decoration: none;
+    color: rgb(var(--ur-color-on-background));
+    cursor: pointer;
+}
+
+:host .profile .info .social a:hover {
+    opacity: 1;
+    text-decoration: underline;
+}
+
 :host .profile .info .social .icon {
     height: 18px;
     width: 18px;
-    margin-right: 16px;
     box-sizing: border-box;
-    border-radius: 5px;
 }
 
 :host .profile .website {
-    padding-top: 16px;
-    padding-bottom: 14px;
+    margin-top: 14px;
+    margin-bottom: 14px;
     font-size: 11px;
-    font-style: normal;
     font-weight: 400;
     line-height: 11px;
-    letter-spacing: -0.262px;
-    text-decoration: none;
-    color: #566262;
+    cursor: pointer;
+    opacity: 0.75;
 }
 
 :host .profile .website:hover {
+    opacity: 1;
     text-decoration: underline;
 }
 
@@ -92,8 +107,24 @@
     font-weight: 300;
 }
 
+:host .profile .stats .stat .value.clickable {
+    color: rgb(var(--ur-color-primary));
+}
+
+:host .profile .stats .stat .value.clickable:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 :host .profile .actions {
     padding-top: 16px;
+    overflow: auto;
+}
+
+:host .profile .actions.actions--mobile-main {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 }
 
 :host .profile .actions ur-button {
@@ -120,21 +151,9 @@
     padding-bottom: 10px;
 }
 
-:host .profile .languages .chip,
-:host .profile .genres .chip,
-:host .profile .literature-types .chip {
-    border-radius: 8px;
-    color: rgb(var(--ur-on-secondary-container));
-    background: rgba(238, 241, 245, 1);
-    height: 24px;
-    display: inline-block;
-    font-size: 11px;
-    line-height: 11px;
-    font-weight: 400;
-    padding: 6px 16px;
-    box-sizing: border-box;
+:host .chip {
     margin-right: 8px;
-    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 :host .profile .created-by .person {
@@ -150,8 +169,8 @@
 }
 
 :host .profile .page-creation-date {
-    padding-top: 8px;
-    color: rgb(var(--ur-color-on-background));
+    margin-top: 16px;
+    color: rgb(var(--ur-color-outline-variant));
     font-size: 11px;
     font-weight: 700;
 }
