--- a/src/components/ur-page-profile/ur-page-profile.css
+++ b/src/components/ur-page-profile/ur-page-profile.css
@@ -12,7 +12,7 @@
 
 :host .profile {
     display: block;
-    padding: 44px 16px 20px 16px;
+    padding: 1px 16px 20px 16px;
     box-sizing: border-box;
 }
 
@@ -27,6 +27,7 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 24px;
+    padding-top: 40px;
 }
 
 :host .profile .info .page-type {
