--- a/src/components/ur-main-menu/ur-main-menu.css
+++ b/src/components/ur-main-menu/ur-main-menu.css
@@ -262,6 +262,11 @@
     font-size: 20px;
 }
 
+:host ur-menu-profile.active {
+    background-color: rgba(var(--ur-color-on-surface), .07);
+    box-shadow: inset 4px 0 0 rgb(var(--ur-color-primary));
+}
+
 :host .menu-navigation {
     margin-top: 8px;
     align-items: center;
@@ -345,7 +350,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: -4px;
+    right: 2px;
 }
 
 :host .notification-badge {
