--- a/src/components/ur-page/ur-page.css
+++ b/src/components/ur-page/ur-page.css
@@ -4,6 +4,13 @@
     --ur-color-on-background: var(--mdui-color-on-background);
     --ur-color-background: var(--mdui-color-background);
     --ur-color-on-container-lite-dark: var(--mdui-color-on-container-lite-dark);
+    --ur-color-on-container-primary: var(--mdui-color-primary-container);
+    --ur-color-primary: var(--mdui-color-primary);
+}
+
+@keyframes placeholderAnimate {
+    0%{ background-position: -650px 0; }
+    100%{ background-position: 650px 0; }
 }
 
 :host {
@@ -18,6 +25,11 @@
     overflow: hidden;
     width: var(--page-width);
     border-radius: var(--page-border-radius);
+    cursor: pointer;
+}
+
+:host .page.loading {
+    cursor: default;
 }
 
 :host .cover {
@@ -29,6 +41,17 @@
     position: relative;
 }
 
+:host .cover.loading {
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background-size: 1000px;
+}
+
 :host .info {
     display: flex;
     flex-direction: column;
@@ -36,6 +59,11 @@
     row-gap: 8px;
     background: rgb(var(--ur-color-background));
     box-sizing: border-box;
+}
+
+:host .info:has(.loading) {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 :host .info .title {
@@ -50,6 +78,17 @@
     text-overflow: ellipsis;
 }
 
+:host .info .title.loading {
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background-size: 1000px;
+}
+
 :host .info .stats {
     font-size: 12px;
     font-weight: 400;
@@ -57,6 +96,18 @@
     display: flex;
     flex-direction: row;
     color: rgb(var(--ur-color-on-background));
+}
+
+:host .info .stats.loading {
+    height: 12px;
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background-size: 1000px;
 }
 
 :host .info .stats b {
@@ -69,6 +120,17 @@
 
 :host .page .actions {
     padding-top: 10px;
+}
+
+:host .info .actions.loading {
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background-size: 1000px;
 }
 
 :host .page .actions ur-button {
@@ -94,6 +156,17 @@
     text-overflow: ellipsis;
 }
 
+:host .info .description.loading {
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background-size: 1000px;
+}
+
 @container page (max-width: 300px) {
     :host .info .title {
         font-size: 14px;
@@ -111,5 +184,17 @@
     :host .info {
         row-gap: 4px;
         padding: 4px;
+    }
+
+    :host .info .title.loading {
+        margin: 0 4px;
+    }
+
+    :host .info .stats.loading {
+        margin: 0 4px;
+    }
+
+    :host .info .description.loading {
+        margin: 0 4px;
     }
 }
