--- a/src/components/ur-novl-summary/ur-novl-summary.css
+++ b/src/components/ur-novl-summary/ur-novl-summary.css
@@ -22,6 +22,7 @@
 :host .cover {
     height: calc( 100vw / 3);
     width: 100%;
+    max-height: 210px;
     position: relative;
 }
 
@@ -97,7 +98,28 @@
     gap: 8px;
 }
 
+@keyframes placeholderAnimate {
+    0% { background-position: -650px 0; }
+    100% { background-position: 650px 0; }
+}
 
+:host .title-text.loading {
+    height: 24px;
+    margin: 8px 0;
+    border-radius: 4px;
+    animation-duration: 1.7s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-name: placeholderAnimate;
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
+    background-size: 1000px;
+}
 
 
 
