--- a/src/components/ur-user-page-profile/ur-user-page-profile.css
+++ b/src/components/ur-user-page-profile/ur-user-page-profile.css
@@ -30,7 +30,7 @@
     padding-top: 40px;
 }
 
-:host .profile .info .page-type {
+:host .profile .info .profile-type {
     padding: 16px 0 0 0;
     font-size: 14px;
     line-height: 14px;
@@ -169,25 +169,7 @@
     margin-bottom: 8px;
 }
 
-:host .profile .created-by .person {
-    color: rgb(var(--ur-color-primary));
-    font-size: 12px;
-    font-weight: 700;
-    display: inline-flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-:host .profile .created-by .person:hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
-
-:host .profile .created-by .person ur-avatar {
-    margin-right: 8px;
-}
-
-:host .profile .page-creation-date {
+:host .profile .user-profile-created-date {
     margin-top: 16px;
     color: rgb(var(--ur-color-outline-variant));
     font-size: 11px;
