overview and more

--- a/src/components/ur-button/ur-button.css
+++ b/src/components/ur-button/ur-button.css
@@ -22,3 +22,7 @@ mdui-button::part(icon) {
     width: 100%;
     display: flex; /* Ensure proper flexbox behavior */
 }
+
+:host.disabled {
+    pointer-events: none;
+}
