--- a/src/components/ur-chapter-item/ur-chapter-item.css
+++ b/src/components/ur-chapter-item/ur-chapter-item.css
@@ -67,6 +67,11 @@
     display: block;
     margin-top: 13px;
     line-height: 16px;
+    cursor: pointer;
+}
+
+:host .chapter-title:hover {
+    text-decoration: underline;
 }
 
 :host .when {
