--- a/src/components/ur-novl-overview-info/ur-novl-overview-info.css
+++ b/src/components/ur-novl-overview-info/ur-novl-overview-info.css
@@ -215,10 +215,7 @@
 :host .actions-holder {
     display: flex;
     gap: 8px;
-}
-
-:host .summary-action {
-    flex: 1;
+    overflow: auto;
 }
 
 :host .owner-holder {
