--- a/src/components/ur-page/ur-page.css
+++ b/src/components/ur-page/ur-page.css
@@ -47,8 +47,12 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: placeholderAnimate;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
     background-size: 1000px;
 }
 
@@ -84,8 +88,12 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: placeholderAnimate;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
     background-size: 1000px;
 }
 
@@ -105,8 +113,12 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: placeholderAnimate;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
     background-size: 1000px;
 }
 
@@ -128,8 +140,12 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: placeholderAnimate;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
     background-size: 1000px;
 }
 
@@ -162,8 +178,12 @@
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     animation-name: placeholderAnimate;
-    background: #f6f7f8;
-    background: linear-gradient(to right, #eee 2%, #ddd 18%, #eee 33%);
+    background: linear-gradient(
+        to right,
+        rgba(var(--ur-color-on-background), 0.04) 2%,
+        rgba(var(--ur-color-on-background), 0.12) 18%,
+        rgba(var(--ur-color-on-background), 0.04) 33%
+    );
     background-size: 1000px;
 }
 
